Fix clipped x and v buttons on search and select box

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,6 +135,10 @@ input {
 	border: 1px solid #1d7484;
 	outline: 0;
 }
+/* fix clipped x and v buttons */
+.search-and-select-box svg {
+	max-width: revert;
+}
 
 .links-list {
 	display: flex;
